# TouchX_IPC

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Device.cpp  Device.h
